crates/codegen/language/tests/src/fail/references/enabled_too_early/test.stderr
error: Parent scope is enabled in '2.0.0'.
  --> src/fail/references/enabled_too_early/test.rs:30:89
   |
30 |                         (field_1 = Optional(reference = Terminal([Three]), enabled_in = "1.0.0"))
   |                                                                                         ^^^^^^^
